<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map_casino">

    <include
        android:id="@+id/barraCity"
        layout="@layout/toolbar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/boxButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/Boxes"
            android:textColor="@color/white"
            app:backgroundTint="@color/negro_transparente" />

        <Button
            android:id="@+id/backCasino"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/BackCasino"
            android:textColor="@color/white"
            app:backgroundTint="@color/negro_transparente" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/goldBoxCasino"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/GoldBox"
            android:textColor="@color/white"
            android:visibility="gone"
            app:backgroundTint="@color/negro_transparente" />

        <Button
            android:id="@+id/objectBoxCasino"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/ObjectBox"
            android:textColor="@color/white"
            android:visibility="gone"
            app:backgroundTint="@color/negro_transparente" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/upgradeCasino"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/Upgrade"
            android:textColor="@color/white"
            android:visibility="gone"
            app:backgroundTint="@color/negro_transparente" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/cancelCasinoButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/ButtonCasino"
            android:textColor="@color/white"
            android:visibility="gone"
            app:backgroundTint="@color/negro_transparente" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>