<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/negro_transparente"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:hint="@string/Email"
        android:inputType="text|textEmailAddress"
        android:textColor="@color/gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerText" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/gris"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

    <EditText
        android:id="@+id/registerRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:hint="@string/Password2"
        android:inputType="textPassword"
        android:textColor="@color/gris"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/Register"
        android:textColor="@color/white"
        app:backgroundTint="@color/negro_transparente"
        app:layout_constraintBottom_toTopOf="@+id/registerGoLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerGoLoginButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/LogIn2"
        android:textColor="@color/white"
        app:backgroundTint="@color/negro_transparente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>