<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@drawable/bakcground_shop"
    >

    <include layout="@layout/toolbar_layout" />

    <ImageView
        android:id="@+id/itemShopImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/ContentItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/item_meat" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/left">

        <ImageButton
            android:id="@+id/minus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/ContentMinus"
            app:srcCompat="@drawable/minus_button" />

        <TextView
            android:id="@+id/ItemShopText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/negro_transparente"
            android:gravity="center"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/plus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/ContentPlus"
            app:srcCompat="@drawable/plus_button" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:text="@string/buyButton"
        android:textColor="@color/white"
        app:backgroundTint="@color/negro_transparente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/right" />

    <ImageButton
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/ContentLeft"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemShopImage"
        app:srcCompat="@drawable/arrow_left" />

    <ImageButton
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="72dp"
        android:contentDescription="@string/ContentRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/left"
        app:layout_constraintTop_toBottomOf="@+id/itemShopImage"
        app:srcCompat="@drawable/arrow_right" />

    <TextView
        android:id="@+id/itemCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/negro_transparente"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemShopImage" />

    <Button
        android:id="@+id/backCreation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="208dp"
        android:layout_marginTop="20dp"
        android:text="@string/backButtonShop"
        android:textColor="@color/white"
        app:backgroundTint="@color/negro_transparente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />




</androidx.constraintlayout.widget.ConstraintLayout>