<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreationActivity"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarCreation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/negro_transparente"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:touchscreenBlocksFocus="false"
            app:title="Creación de Personaje"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
            app:titleTextColor="@color/white" />
    </TableRow>

    <TableRow>

        <ImageView
            android:id="@+id/characterImageView"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:contentDescription="@string/ImageCharacterDescription" />

        <ImageView
            android:id="@+id/classImageView"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:contentDescription="@string/ImageClassDescription" />

    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="15"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/Name"
            android:inputType="text"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColorHint="#A1887F"
            android:textSize="30sp" />
    </TableRow>

    <TableRow
        android:layout_height="40dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/raceText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/Race"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/raceSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:entries="@array/Races"
            android:spinnerMode="dialog" />
    </TableRow>

    <TableRow
        android:layout_height="40dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/classText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/Class"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/classSpiner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:entries="@array/Classes"
            android:spinnerMode="dialog" />
    </TableRow>

    <TableRow
        android:layout_height="40dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/vitalStatusText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/VitalStatus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/vitalStatusSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:entries="@array/VitalStatus2"
            android:spinnerMode="dialog" />


    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/creationButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/CreationButton"
            android:textColor="@color/white"
            app:backgroundTint="@color/negro_transparente" />
    </TableRow>

</TableLayout>