<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemFondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/barraItem"
        layout="@layout/toolbar_layout" />

    <Button
        android:id="@+id/pickUpItem"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:text="@string/PickButton"
        android:textColor="@color/white"
        app:backgroundTint="@color/negro_transparente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backItem"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:text="@string/ContinueButton"
        android:textColor="@color/white"
        app:backgroundTint="@color/negro_transparente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/ItemImage"
        app:layout_constraintBottom_toTopOf="@+id/pickUpItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraItem"
        app:srcCompat="@drawable/item_capsule_purple" />

</androidx.constraintlayout.widget.ConstraintLayout>